--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
    <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
+    <div class=image-container id="imageContainer">
+      
+
+    </div>
     
     <script type="module" src="/src/main.ts"></script>
   </body>
