--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
 <body>
   <main>
     <section class="container">
-      <div class=image-container id="imageContainer">
-        
-      </div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
+      <div class=image-container id="imageContainer"></div>
     </section>
   </main>
   <script type="module" src="/src/main.ts"></script>
