--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 <body>
   <main>
     <section class="container">
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
-      <div class=image-container id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container" id="imageContainer"></div>
     </section>
+    <button class="start">START</button>
   </main>
   <script type="module" src="/src/main.ts"></script>
 </body>
