--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <section class="container">
       <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container2" id="imageContainer"></div>
       <div class="image-container" id="imageContainer"></div>
       <div class="image-container" id="imageContainer"></div>
       <div class="image-container" id="imageContainer"></div>
