cambios en index html

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
   <main>
     <section class="container">
-      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container1" id="imageContainer"></div>
       <div class="image-container2" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
-      <div class="image-container" id="imageContainer"></div>
+      <div class="image-container3" id="imageContainer"></div>
+      <div class="image-container4" id="imageContainer"></div>
+      <div class="image-container5" id="imageContainer"></div>
+      <div class="image-container6" id="imageContainer"></div>
+      <div class="image-container7" id="imageContainer"></div>
+      <div class="image-container8" id="imageContainer"></div>
+      <div class="image-container9" id="imageContainer"></div>
+      <div class="image-container10" id="imageContainer"></div>
+      <div class="image-container11" id="imageContainer"></div>
+      <div class="image-container12" id="imageContainer"></div>
     </section>
     <button class="start">START</button>
   
