cambios index y ui

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       
       
     </section>
-    <button class="start" id="button">START</button>
+    <button class="start" id="button">RESTART</button>
 
     <script type="module" src="/src/main.ts"></script>
 </body>
